--- a/bower.json
+++ b/bower.json
@@ -4,10 +4,10 @@
     "authors": [
         "Joe Marie Bonilla"
     ],
-    "description": "My Portfolio",
+    "description": "Philippine Tour Site",
     "main": "bower",
     "keywords": [
-        "Portfolios"
+        "Philippine Tour Site"
     ],
     "license": "MIT",
     "homepage": "turistaphil.tk",
